update color header homepage + resource kader

--- a/public/asset/home/css/style.css
+++ b/public/asset/home/css/style.css
@@ -388,7 +388,7 @@ a:focus {
 #navbarmain .nav-link {
   font-weight: 600;
   padding: 10px 15px;
-  color: #222;
+  color: #fffdfd;
   font-family: "Exo", sans-serif;
   text-transform: capitalize;
   font-size: 16px;
